fix: Remove join endpoint
